--- a/HW08.12.2022/index.html
+++ b/HW08.12.2022/index.html
@@ -277,13 +277,13 @@ Y88b  d88P 888  888 888
  "Y8888P88 "Y888888 888
   ============================== -->
 
-<main>
-      <div class="img-1"></div>
-      <div class="img-2"></div>
-      <div class="img-3"></div>
-      <div class="img-4"></div>
-      <div class="img-5"></div>
-      <div class="img-6"></div>
-</main>
+<div class="galary">
+  <div class="div div-1">1</div>
+  <div class="div div-2">2</div>
+  <div class="div div-3">3</div>
+  <div class="div div-4">4</div>
+  <div class="div div-5">5</div>
+  <div class="div div-6">6</div>
+</div>
 </body>
 </html>
