HW figma dodelat

--- a/HW25.02.2023/index.html
+++ b/HW25.02.2023/index.html
@@ -198,28 +198,28 @@
                                     <h2 class="h2-companyRight">90</h2>
                                     <h4 class="h4-companyRight">Завершено
                                         крупных сделок</h4>
-                                    <a href="" class="companyLink">Все кейсы</a>
+                                    <a href="#" class="companyLink">Все кейсы</a>
                                 </div>
 
                                 <div class="results">
                                     <h2 class="h2-companyRight">90</h2>
                                     <h4 class="h4-companyRight">Завершено
                                         крупных сделок</h4>
-                                    <a href="" class="companyLink">Все кейсы</a>
+                                    <a href="#" class="companyLink">Все кейсы</a>
                                 </div>
 
                                 <div class="results">
                                     <h2 class="h2-companyRight">90</h2>
                                     <h4 class="h4-companyRight">Завершено
                                         крупных сделок</h4>
-                                    <a href="" class="companyLink">Все кейсы</a>
+                                    <a href="#" class="companyLink">Все кейсы</a>
                                 </div>
 
                                 <div class="results">
                                     <h2 class="h2-companyRight">90</h2>
                                     <h4 class="h4-companyRight">Завершено
                                         крупных сделок</h4>
-                                    <a href="" class="companyLink">Все кейсы</a>
+                                    <a href="#" class="companyLink">Все кейсы</a>
                                 </div>
                             </div>
                         </div>
