--- a/HW25.02.2023/index.html
+++ b/HW25.02.2023/index.html
@@ -66,6 +66,16 @@
 
             <main>
                 <section class="header">
+                    <!-- //ДЛЯ МОДАЛЬНОГО ОКНА -->
+                    <!-- <div class="modal">
+                        <ul class="modal_menu">
+                            <li class="modal_menu_item"><a href="#">ГЛАВНАЯ</a></li>
+                            <li class="modal_menu_item"><a href="#special">УСЛУГИ</a></li>
+                            <li class="modal_menu_item"><a href="#">КЕЙСЫ</a></li>
+                            <li class="modal_menu_item"><a href="#">О КОМПАНИИ</a></li>
+                            <li class="modal_menu_item"><a href="#contacts">КОНТАКТЫ</a></li>
+                        </ul>
+                    </div> -->
                     <div class="banner">
                         <div class="container">
                             <h2 class="bannerText">Бухгалтерские услуги
@@ -113,7 +123,7 @@
                      888                                         
     =======================  -->
 
-                <section class="special">
+                <section id ="special" class="special">
                     <div class="container">
                         <h4 class="h4-special1">Наши услуги</h4>
                         <h2 class="h2-special">Мы специализируемся</h2>
@@ -247,6 +257,7 @@
                         <h2 class="h2_clients">С нами работают</h2>
                         <div class="clients_slider">
                             <div class="clientsList">
+                    
                                 <div class="clients_slide">
                                     <img src="./image/microsoft (1).png" alt="#" class="clients_item">
                                     <img src="./image/microsoft (1).png" alt="#" class="clients_item">
@@ -441,7 +452,7 @@
         ================ -->
 
 
-                <section class="contacts">
+                <section id="contacts" class="contacts">
                     <div class="container">
                         <div class="info">
                             <div class="contactsTxt">
