--- a/HW25.02.2023/index.html
+++ b/HW25.02.2023/index.html
@@ -67,7 +67,7 @@
             <main>
                 <section class="header">
                     <!-- //ДЛЯ МОДАЛЬНОГО ОКНА -->
-                    <!-- <div class="modal">
+                    <div class="modal">
                         <ul class="modal_menu">
                             <li class="modal_menu_item"><a href="#">ГЛАВНАЯ</a></li>
                             <li class="modal_menu_item"><a href="#special">УСЛУГИ</a></li>
@@ -75,7 +75,7 @@
                             <li class="modal_menu_item"><a href="#">О КОМПАНИИ</a></li>
                             <li class="modal_menu_item"><a href="#contacts">КОНТАКТЫ</a></li>
                         </ul>
-                    </div> -->
+                    </div>
                     <div class="banner">
                         <div class="container">
                             <h2 class="bannerText">Бухгалтерские услуги
